--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ header{
 	width:400px;
 	height:450px;
 	background:#fff;
+	opacity:0.6;
+	z-index:1;
 	position:absolute;
 	top:50%;
 	left:50%;
@@ -63,8 +65,13 @@ form input{
 
 
 
-
-
+@media(max-width:991px){
+	  header{
+		 width:100%;
+		 height:100vh;
+		 object-fit:cover;
+	  }
+}
 
 
 
